[package]
name = "signer-baas"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Alloy
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-signer-local.workspace = true
alloy-signer.workspace = true

tracing.workspace = true

[features]
default = ["std"]
std = [
    "alloy-primitives/std",
    "alloy-consensus/std",
]
